updating to new SC, closes #279

--- a/pages/scf.html
+++ b/pages/scf.html
@@ -82,14 +82,14 @@ redirect_from:
   </div>
 </div>
 
-<h2 id="committee-2015">Steering Committee (2015)</h2>
+<h2 id="committee-2016">Steering Committee (2016)</h2>
 
 <div class="row">
   <div class="medium-4 columns">
-    {% include people/huff_k.html %}
+    {% include people/weaver_belinda.html %}
   </div>
   <div class="medium-4 columns">
-    {% include people/davis_m.html %}
+    {% include people/harris_rayna.html %}
   </div>
   <div class="medium-4 columns">
     {% include people/lagesen_k.html %}
@@ -100,10 +100,10 @@ redirect_from:
     {% include people/williams_jason.html %}
   </div>
   <div class="medium-4 columns">
-    {% include people/chuang-howe_a.html %}
+    {% include people/mills_b.html %}
   </div>
   <div class="medium-4 columns">
-    {% include people/pawlik_a.html %}
+    {% include people/hertweck_kate.html %}
   </div>
 </div>
 <div class="row">
