Adding a link to the lesson maintainers' mailing list.
- Should have been added ages ago.
- Also lower-cased the name of the mentoring list for consistency.

--- a/pages/join.html
+++ b/pages/join.html
@@ -92,19 +92,37 @@ redirect_from:
   </tr>
   <tr>
     <td>
-      <a href="{{site.mailing_lists}}/mailman/listinfo/mentoring_lists.software-carpentry.org">Mentoring</a>
+      <a href="{{site.mailing_lists}}/mailman/listinfo/mentoring_lists.software-carpentry.org">mentoring</a>
     </td>
     <td>
       <a href="{{site.mailing_lists}}/pipermail/mentoring_lists.software-carpentry.org/">(archives)</a>
     </td>
     <td>
-      Working mailing list of Mentoring Subcommittee.
+      Working mailing list of the Mentoring subcommittee.
     </td>
     <td>
       5-20 messages/week
     </td>
     <td>
       moderated
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <a href="{{site.mailing_lists}}/mailman/listinfo/maintainers_lists.software-carpentry.org">maintainers</a>
+    </td>
+    <td>
+      <a href="{{site.mailing_lists}}/pipermail/maintainers_lists.software-carpentry.org/">(archives)</a>
+    </td>
+    <td>
+      Working mailing list of the Lesson Development subcommittee
+      (which includes all active lesson maintainers).
+    </td>
+    <td>
+      5-20 messages/week
+    </td>
+    <td>
+      unmoderated
     </td>
   </tr>
   <tr>
