Abigail Cabunoc -> Abigail Cabunoc Mayes
Thanks for the heads up @wking

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -67,7 +67,7 @@ redirect_from:
     <td><a href="{{site.github_url}}/sql-novice-survey" target="_blank" class="icon-github" title="icon-github"></a></td>
     <td><a href="{{site.github_io_url}}/sql-novice-survey/reference.html" target="_blank" class="icon-eye" title="icon-eye"></a></td>
     <td>
-      <a href="{{site.baseurl}}/team/#cabunoc_abigail">Abigail Cabunoc</a>,
+      <a href="{{site.baseurl}}/team/#cabunoc_abigail">Abigail Cabunoc Mayes</a>,
       <a href="{{site.baseurl}}/team/#mckay_sheldon">Sheldon McKay</a>
     </td>
   </tr>
