Linking to data privacy policy.
1. Adding link to main menu.
2. Adding link from SCF page.
3. Fixing non-ASCII quote characters in privacy page.

--- a/pages/scf.html
+++ b/pages/scf.html
@@ -159,3 +159,10 @@ redirect_from:
   <div class="medium-8 columns">
   </div>
 </div>
+
+<h2>Data Privacy Policy</h2>
+
+<p>
+  The Software Carpentry Foundation is is dedicated to the security and privacy of your data.
+  Please see <a href="{{site.baseurl}}/privacy/">this page</a> for our data privacy policy.
+</p>
