Linking to data privacy policy from FAQ

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -34,6 +34,7 @@ redirect_from:
     <ul>
       <li><a href="#how-contribute">How can I contribute?</a></li>
       <li><a href="#how-acknowledge">How can I acknowledge Software Carpentry in my work?</a></li>
+      <li><a href="#data-privacy">What data does the Software Carpentry Foundation collect and what does it do with it?</a></li>
       <li><a href="#other-initiatives">What other initiatives is Software Carpentry connected to?</a></li>
       <li><a href="#citation">How should I cite Software Carpentry?</a></li>
       <li><a href="#buy-stuff">Where can I buy Software Carpentry swag?</a></li>
@@ -329,6 +330,17 @@ redirect_from:
       <br/>
       [1] Software Carpentry: http://software-carpentry.org.
     </blockquote>
+  </dd>
+
+  <dt id="data-privacy">What data does the Software Carpentry Foundation collect and what does it do with it?</dt>
+  <dd>
+    <p>
+      The Software Carpentry Foundation is is dedicated to the security and privacy of your data.
+      To find out what data we collect,
+      how we collect it,
+      and what we do with it,
+      please see <a href="{{site.baseurl}}/privacy/">our data privacy policy</a>.
+    </p>
   </dd>
 
   <dt id="other-initiatives">What other initiatives is Software Carpentry connected to?</dt>
