--- a/pages/join.html
+++ b/pages/join.html
@@ -44,6 +44,14 @@ redirect_from:
 </p>
 <iframe src="https://calendar.google.com/calendar/embed?title=%20Software%20Carpentry%20Community%20Calendar%20&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=oseuuoht0tvjbokgg3noh8c47g%40group.calendar.google.com&amp;color=%231B887A" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
+<h2 id="discussion">Meetup at Conferences</h2>
+<p>
+Going to an event where other Software Carpentry instructors might be? Add
+an entry to
+<a href="{{site.pad_url}}/swc-events-meetup">the meetup
+  etherpad</a> and try to arrange a meetup.
+</p>
+
 <h2 id="discussion">Conversations</h2>
 <p>
   You can join the conversation by following <a href="{{site.baseurl}}/blog/">our blog</a>,
