--- a/pages/workshops_request.html
+++ b/pages/workshops_request.html
@@ -40,10 +40,9 @@ redirect_from:
       Software Carpentry welcomes you to organize and run your own workshop
       <strong>by optional donation</strong>. In order to use the
       Software Carpentry name and logo at your event, we only
-      require that you follow
-      <a href='http://software-carpentry.org/lessons/'>our curriculum</a>,
-      and have at least one <a href=''>badged instructor</a> teaching and
-      co-organizing your event. In order to help Software Carpentry
+      require that you follow our curriculum, have at least one badged instructor teaching and
+      co-organizing your event, and <a href="mailto:{{site.contact}}">let us know</a>
+      that you're organizing a workshop. In order to help Software Carpentry
       continue operating and offering workshops around the world,
       we ask for (but <strong>do not require</strong>) a donation,
       and recommend $500 USD as a suitable amount.
