--- a/pages/workshops_request.html
+++ b/pages/workshops_request.html
@@ -38,7 +38,7 @@ redirect_from:
     <h4>Self-Organized Workshops: Optional Donation</h4>
     <p>
       Software Carpentry welcomes you to organize and run your own workshop
-      without administrative support from the Software Carpentry Foundation
+      without administrative assistance from the Software Carpentry Foundation
       <strong>by optional donation</strong>. In order to use the
       Software Carpentry name and logo at your event, we only
       require that you follow our curriculum, have at least one badged instructor teaching and
