remove $1250 discount for self-org partner workshops

--- a/pages/workshops_request.html
+++ b/pages/workshops_request.html
@@ -50,13 +50,12 @@ redirect_from:
     </p>
   </li>
   <li>
-    <h4>Nonprofit Organization: $1250-$2500</h4>
+    <h4>Nonprofit Organization: $2500</h4>
     <p>
       If you are a not-for-profit, such as a university or government
       lab, the Software Carpentry Foundation will organize a workshop
       for you (not including instructor travel and accommodation
-      costs) for $2500 USD if you are not a Software Carpentry Foundation
-      partner, and $1250 USD if you are.
+      costs) for $2500 USD.
     </p>
   </li>
   <li>
