Removing mentions of the defunct 'announcements' list

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -570,10 +570,9 @@ redirect_from:
   <dt id="how-attend-workshop">How can I attend a workshop?</dt>
   <dd>
     <p>
-      Dates and venues of upcoming workshops are on our <a href="{{site.baseurl}}/workshops/index.html#">calendar</a>.
-      They are also announced on our <a href="{{site.baseurl}}/blog/index.html">blog</a>,
-      on <a href="{{site.twitter_url}}">Twitter</a>,
-      and through our <a href="{{site.baseurl}}/join/">announcements list</a>.
+      Dates and venues of upcoming workshops are on our <a href="{{site.baseurl}}/workshops/index.html#">calendar</a>,
+      on our <a href="{{site.baseurl}}/blog/index.html">blog</a>,
+      and on <a href="{{site.twitter_url}}">Twitter</a>.
     </p>
   </dd>
 
