--- a/pages/workshops_operations.html
+++ b/pages/workshops_operations.html
@@ -968,22 +968,9 @@ redirect_from:
 <h3 id="host-report">Report Back</h3>
 <p>
   Once the workshop is over,
-  the host will send the following information
-  to Software Carpentry admin:
-</p>
-<ul>
-  <li>
-    <p>
-      the number of attendees
-    </p>
-  </li>
-  <li>names and email addresses of attendees, for our internal database
-    <p>
-      and so we can invite them to join our announcements mailing list
-    </p>
-  </li>
-</ul>
-<p>
+  the host will send the number of attendees
+  (and if allowed, their names and email addresses)
+  to Software Carpentry admin.
   The host will also let admin know how the workshop went.
   Was it the right content?
   The right pace?
