--- a/pages/subcom_template.html
+++ b/pages/subcom_template.html
@@ -29,7 +29,7 @@ members:
 
 <h1>{{page.subcomName}} Subcommittee</h1>
 
-<h3>Purpose & Scope</h3>
+<h3>Purpose and Scope</h3>
 <p>{{page.purpose}}</p>
 
 <h3>What We Do</h3>
