make workshop request link use button class from bootstrap

--- a/pages/workshops_request.html
+++ b/pages/workshops_request.html
@@ -14,9 +14,12 @@ redirect_from:
 </p>
 
 <div align="center">
-  <h4>
-    <a href="https://amy.software-carpentry.org/workshops/swc/request/">Request a Software Carpentry workshop</a>
-  </h4>
+<a href="https://amy.software-carpentry.org/workshops/swc/request/">
+  <button class="btn">
+    Request a Software Carpentry workshop
+  </button>
+</a>
+
 </div>
 
 <p>
