Updating website language for new partnership tiers

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -146,7 +146,7 @@ redirect_from:
       <a href="{{site.baseurl}}/scf/workshops.html">an administration fee</a>
       for workshops that we help arrange,
       by <a href="{{site.baseurl}}/scf/membership.html">membership dues</a> from
-      our <a href="{{site.baseurl}}/scf/supporters.html">partners and affiliates</a>,
+      our <a href="{{site.baseurl}}/scf/partners/">partners</a>,
       and by <a href="{{site.paypal_url}}">donations</a> from supporters like you.
     </p>
   </dd>
