--- a/pages/scf.html
+++ b/pages/scf.html
@@ -45,8 +45,7 @@ redirect_from:
       The <em>Advisory Council</em> includes representatives of
       organizations that support the Software Carpentry Foundation's mission.
       The Steering Committee must consult with it when making significant strategic, contractual, or financial decisions.
-      Every partner organization may appoint a representative,
-      and the Steering Committee may co-opt additional persons to the Advisory Council from the wider community.
+      Partner organizations in Silver, Gold or Platinum tiers  may appoint a representative, and the Steering Committee may co-opt additional persons to the Advisory Council from the wider community.
     </p>
   </li>
   <li id="executive-directory">
