--- a/pages/scf_partners.html
+++ b/pages/scf_partners.html
@@ -33,7 +33,7 @@ redirect_from:
 
 <hr/>
 
-<h2>Partners</h2>
+<h2>Gold Partners</h2>
 
 <div class="row">
   <div class="medium-6 columns">
@@ -77,7 +77,7 @@ redirect_from:
 
 <hr/>
 
-<h2>Affiliates</h2>
+<h2>Silver Partners</h2>
 
 <div class="row">
   <div class="medium-6 columns">
