Fixing maintainer's name

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -78,7 +78,7 @@ redirect_from:
     <td><a href="{{site.github_io_url}}/python-novice-inflammation/reference.html" target="_blank" class="icon-eye" title="icon-eye"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#bekolay_trevor">Trevor Bekolay</a>,
-      <a href="{{site.baseurl}}/team/#bostroem_a">Azalee Bostroem</a>
+      <a href="{{site.baseurl}}/team/#staneva_valentina">Valentina Staneva</a>
     </td>
   </tr>
   <tr id="r-prog">
