Adding Duckles report on non-teaching instructors while cleaning up to make that sensible.
1.  Consolidating files/bib and files/papers (lots of overlap, should be one directory).
2.  Adding Beth Duckles' second report (on non-teaching instructors).
3.  Updating links.

--- a/pages/reading.html
+++ b/pages/reading.html
@@ -19,7 +19,7 @@ redirect_from:
 
   <li>
     <p>
-      Jorge Aranda: "<a href="{{site.filesurl}}/papers/aranda-assessment-2012-07.pdf">Software Carpentry Assessment Report</a>",
+      Jorge Aranda: "<a href="{{site.filesurl}}/bib/aranda-assessment-2012-07.pdf">Software Carpentry Assessment Report</a>",
       July 2012.
     </p>
   </li>
@@ -36,7 +36,15 @@ redirect_from:
   <li>
     <p>
       Beth Duckles:
-      "<a href="{{site.baseurl}}/files/papers/duckles-instructor-engagement-2016.pdf">Value of Software Carpentry to Instructors</a>",
+      "<a href="{{site.baseurl}}/files/bib/duckles-instructor-engagement-2016.pdf">Value of Software Carpentry to Instructors</a>",
+      2016
+    </p>
+  </li>
+
+  <li>
+    <p>
+      Beth Duckles:
+      "<a href="{{site.baseurl}}/files/bib/duckles-non-instructor-report-2016.pdf">Non-Teaching Instructor Report</a>",
       2016
     </p>
   </li>
@@ -52,7 +60,7 @@ redirect_from:
   <li>
     <p>
       Jo Erskine Hannay, Hans Petter Langtangen, Carolyn MacLeod, Dietmar Pfahl, Janice Singer, and Greg Wilson:
-      "<a href="{{site.filesurl}}/papers/secse-survey-2009.pdf">How Do Scientists Develop and Use Scientific Software?</a>"
+      "<a href="{{site.filesurl}}/bib/secse-survey-2009.pdf">How Do Scientists Develop and Use Scientific Software?</a>"
       <cite>Proc. 2009 ICSE Workshop on Software Engineering for Computational Science and Engineering</cite>,
       2009.
     </p>
@@ -87,7 +95,7 @@ redirect_from:
   <li>
     <p>
       Julie Libarkin:
-      "<a href="{{site.filesurl}}/papers/libarkin-assessment-report-2012-06.pdf">Software Carpentry Workshop Evaluation</a>",
+      "<a href="{{site.filesurl}}/bib/libarkin-assessment-report-2012-06.pdf">Software Carpentry Workshop Evaluation</a>",
       June 2012.
     </p>
   </li>
