Modified the CoC to make it clear that it applies in online spaces as well as at workshops.

--- a/pages/conduct.html
+++ b/pages/conduct.html
@@ -11,7 +11,8 @@ redirect_from:
   participation of every member of the scientific community and want
   all attendees to have an enjoyable and fulfilling experience.
   Accordingly, all attendees are expected to show respect and courtesy
-  to other attendees throughout the workshop.
+  to other attendees throughout the workshop. The same standards of
+  behaviour are expected in Software Carpentry spaces online.
 </p>
 
 <p>
@@ -28,7 +29,7 @@ redirect_from:
 
 <p>
   Software Carpentry is dedicated to providing a harassment-free
-  learning experience for everyone, regardless of gender, sexual
+  experience for everyone, regardless of gender, sexual
   orientation, disability, physical appearance, body size, race,
   nationality, religion, or choice of text editor. We do not tolerate
   harassment of participants in any form.
@@ -37,9 +38,9 @@ redirect_from:
 <ol>
   <li>
     <p>
-      Harassment includes offensive verbal comments related to gender,
+      Harassment includes offensive verbal or written comments related to gender,
       sexual orientation, disability, physical appearance, body size,
-      race, religion, sexual images in public spaces, deliberate
+      race, or religion, sexual images in public spaces, deliberate
       intimidation, stalking, following, harassing photography or
       recording, sustained disruption of talks or other events,
       inappropriate physical contact, and unwelcome sexual attention.
@@ -54,7 +55,7 @@ redirect_from:
   </li>
   <li>
     <p>
-      Be kind to others. Do not insult or put down other attendees.
+      Be kind to others. Do not insult or put down other participants.
     </p>
   </li>
   <li>
@@ -67,8 +68,9 @@ redirect_from:
 
 <p>
   Participants asked to stop any harassing behavior are expected to
-  comply immediately.  Attendees violating these rules may be asked to
-  leave the event at the sole discretion of the conference organizers
+  comply immediately.  People violating these rules may be asked to
+  leave the event or be excluded from the online venue
+  at the sole discretion of the organizers,
   without a refund of any charge that may have been levied.
 </p>
 
