Adding U of Florida

--- a/pages/scf_partners.html
+++ b/pages/scf_partners.html
@@ -72,6 +72,7 @@ redirect_from:
     {% include orgs/uw-escience.html %}
   </div>
   <div class="medium-6 columns">
+    {% include orgs/ufl.html %}
   </div>
 </div>
 
