Linking to older versions of lessons

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -7,9 +7,9 @@ redirect_from:
 ---
 <p>
   Our lessons are developed collaboratively on <a href="{{site.github_url}}">GitHub</a>.
-  You can check the status of each lesson on
-  <a href="{{site.baseurl}}/lessons/dashboard/">our dashboard</a>,
-  or view the <a href="http://scf.rgaiacs.com/nightly/">nightly build</a>.
+  You can check the status of each lesson on <a href="{{site.baseurl}}/lessons/dashboard/">our dashboard</a>,
+  view the <a href="http://scf.rgaiacs.com/nightly/">nightly build</a>,
+  or look at <a href="{{site.baseurl}}/lessons/previous">older releases</a>.
   You may also enjoy <a href="http://www.datacarpentry.org/lessons/">Data Carpentry's lessons</a>,
   which focus on data organization, cleanup, analysis, and visualization.
 </p>
