--- a/pages/lessons_previous.html
+++ b/pages/lessons_previous.html
@@ -3,6 +3,43 @@ layout: page-fullwidth
 permalink: /lessons/previous/
 title: Previous Material
 ---
+<h2 id="v5">Version 5</h2>
+
+<p>
+  Previous releases of Version 5 are listed below.
+</p>
+
+<table class="table table-striped">
+  <tr>
+    <th>Lesson</th>
+    <th>Version 5.3 (August 2015)</th>
+  </tr>
+  <tr>
+    <td>The Unix Shell</td>
+    <td><a href="{{site.releases_io_url}}/2015.08/shell-novice" target="_blank" class="icon-browser" title="The Unix Shell"></a></td>
+  </tr>
+  <tr>
+    <td>Version Control with Git</td>
+    <td><a href="{{site.releases_io_url}}/2015.08/git-novice" target="_blank" class="icon-browser" title="Version Control with Git"></a></td>
+  </tr>
+  <tr>
+    <td>Version Control with Mercurial</td>
+    <td><a href="{{site.releases_io_url}}/2015.08/hg-novice" target="_blank" class="icon-browser" title="Version Control with Mercurial"></a></td>
+  </tr>
+  <tr>
+    <td>Using Databases and SQL</td>
+    <td><a href="{{site.releases_io_url}}/2015.08/sql-novice-survey" target="_blank" class="icon-browser" title="Using Databases and SQL"></a></td>
+  </tr>
+  <tr>
+    <td>Programming with Python</td>
+    <td><a href="{{site.releases_io_url}}/2015.08/python-novice-inflammation" target="_blank" class="icon-browser" title="Programming with Python"></a></td>
+  </tr>
+  <tr>
+    <td>Programming with R</td>
+    <td><a href="{{site.releases_io_url}}/2015.08/r-novice-inflammation" target="_blank" class="icon-browser" title="Programming with R"></a></td>
+  </tr>
+</table>
+
 <h2 id="v4">Version 4</h2>
 <p>
   This material was created in 2010-11,
