Fixing the 'title' elements for icon images in the lesson table.

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -34,9 +34,9 @@ redirect_from:
   </tr>
   <tr>
     <td id="shell">The Unix Shell</td>
-    <td><a href="{{site.github_io_url}}/shell-novice" target="_blank" class="icon-browser" title="icon-browser"></a></td>
-    <td><a href="{{site.github_url}}/shell-novice" target="_blank" class="icon-github" title="icon-github"></a></td>
-    <td><a href="{{site.github_io_url}}/shell-novice/reference.html" target="_blank" class="icon-eye" title="icon-eye"></a></td>
+    <td><a href="{{site.github_io_url}}/shell-novice" target="_blank" class="icon-browser" title="The Unix Shell"></a></td>
+    <td><a href="{{site.github_url}}/shell-novice" target="_blank" class="icon-github" title="The Unix Shell"></a></td>
+    <td><a href="{{site.github_io_url}}/shell-novice/reference.html" target="_blank" class="icon-eye" title="The Unix Shell"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#devenyi_gabriel">Gabriel Devenyi</a>,
       <a href="{{site.baseurl}}/team/#srinath_ashwin">Ashwin Srinath</a>
@@ -44,9 +44,9 @@ redirect_from:
   </tr>
   <tr id="git">
     <td>Version Control with Git</td>
-    <td><a href="{{site.github_io_url}}/git-novice" target="_blank" class="icon-browser" title="icon-browser"></a></td>
-    <td><a href="{{site.github_url}}/git-novice" target="_blank" class="icon-github" title="icon-github"></a></td>
-    <td><a href="{{site.github_io_url}}/git-novice/reference.html" target="_blank" class="icon-eye" title="icon-eye"></a></td>
+    <td><a href="{{site.github_io_url}}/git-novice" target="_blank" class="icon-browser" title="Version Control with Git"></a></td>
+    <td><a href="{{site.github_url}}/git-novice" target="_blank" class="icon-github" title="Version Control with Git"></a></td>
+    <td><a href="{{site.github_io_url}}/git-novice/reference.html" target="_blank" class="icon-eye" title="Version Control with Git"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#gonzalez_ivan">Ivan Gonzalez</a>,
       <a href="{{site.baseurl}}/team/#huang_daisie">Daisie Huang</a>
@@ -54,18 +54,18 @@ redirect_from:
   </tr>
   <tr id="hg">
     <td>Version Control with Mercurial</td>
-    <td><a href="{{site.github_io_url}}/hg-novice" target="_blank" class="icon-browser" title="icon-browser"></a></td>
-    <td><a href="{{site.github_url}}/hg-novice" target="_blank" class="icon-github" title="icon-github"></a></td>
-    <td><a href="{{site.github_io_url}}/hg-novice/reference.html" target="_blank" class="icon-eye" title="icon-eye"></a></td>
+    <td><a href="{{site.github_io_url}}/hg-novice" target="_blank" class="icon-browser" title="Version Control with Mercurial"></a></td>
+    <td><a href="{{site.github_url}}/hg-novice" target="_blank" class="icon-github" title="Version Control with Mercurial"></a></td>
+    <td><a href="{{site.github_io_url}}/hg-novice/reference.html" target="_blank" class="icon-eye" title="Version Control with Mercurial"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#latornell_d">Doug Latornell</a>
     </td>
   </tr>
   <tr id="sql">
     <td>Using Databases and SQL</td>
-    <td><a href="{{site.github_io_url}}/sql-novice-survey" target="_blank" class="icon-browser" title="icon-browser"></a></td>
-    <td><a href="{{site.github_url}}/sql-novice-survey" target="_blank" class="icon-github" title="icon-github"></a></td>
-    <td><a href="{{site.github_io_url}}/sql-novice-survey/reference.html" target="_blank" class="icon-eye" title="icon-eye"></a></td>
+    <td><a href="{{site.github_io_url}}/sql-novice-survey" target="_blank" class="icon-browser" title="Using Databases and SQL"></a></td>
+    <td><a href="{{site.github_url}}/sql-novice-survey" target="_blank" class="icon-github" title="Using Databases and SQL"></a></td>
+    <td><a href="{{site.github_io_url}}/sql-novice-survey/reference.html" target="_blank" class="icon-eye" title="Using Databases and SQL"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#cabunoc_abigail">Abigail Cabunoc Mayes</a>,
       <a href="{{site.baseurl}}/team/#mckay_sheldon">Sheldon McKay</a>
@@ -73,9 +73,9 @@ redirect_from:
   </tr>
   <tr id="python">
     <td>Programming with Python</td>
-    <td><a href="{{site.github_io_url}}/python-novice-inflammation" target="_blank" class="icon-browser" title="icon-browser"></a></td>
-    <td><a href="{{site.github_url}}/python-novice-inflammation" target="_blank" class="icon-github" title="icon-github"></a></td>
-    <td><a href="{{site.github_io_url}}/python-novice-inflammation/reference.html" target="_blank" class="icon-eye" title="icon-eye"></a></td>
+    <td><a href="{{site.github_io_url}}/python-novice-inflammation" target="_blank" class="icon-browser" title="Programming with Python"></a></td>
+    <td><a href="{{site.github_url}}/python-novice-inflammation" target="_blank" class="icon-github" title="Programming with Python"></a></td>
+    <td><a href="{{site.github_io_url}}/python-novice-inflammation/reference.html" target="_blank" class="icon-eye" title="Programming with Python"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#bekolay_trevor">Trevor Bekolay</a>,
       <a href="{{site.baseurl}}/team/#staneva_valentina">Valentina Staneva</a>
@@ -83,9 +83,9 @@ redirect_from:
   </tr>
   <tr id="r-prog">
     <td>Programming with R</td>
-    <td><a href="{{site.github_io_url}}/r-novice-inflammation" target="_blank" class="icon-browser" title="icon-browser"></a></td>
-    <td><a href="{{site.github_url}}/r-novice-inflammation" target="_blank" class="icon-github" title="icon-github"></a></td>
-    <td><a href="{{site.github_io_url}}/r-novice-inflammation/reference.html" target="_blank" class="icon-eye" title="icon-eye"></a></td>
+    <td><a href="{{site.github_io_url}}/r-novice-inflammation" target="_blank" class="icon-browser" title="Programming with R"></a></td>
+    <td><a href="{{site.github_url}}/r-novice-inflammation" target="_blank" class="icon-github" title="Programming with R"></a></td>
+    <td><a href="{{site.github_io_url}}/r-novice-inflammation/reference.html" target="_blank" class="icon-eye" title="Programming with R"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#chen_daniel">Daniel Chen</a>,
       <a href="{{site.baseurl}}/team/#dashnow_harriet">Harriet Dashnow</a>
@@ -93,9 +93,9 @@ redirect_from:
   </tr>
   <tr id="r-reproducible">
     <td>R for Reproducible Scientific Analysis</td>
-    <td><a href="{{site.github_io_url}}/r-novice-gapminder" target="_blank" class="icon-browser" title="icon-browser"></a></td>
-    <td><a href="{{site.github_url}}/r-novice-gapminder" target="_blank" class="icon-github" title="icon-github"></a></td>
-    <td><a href="{{site.github_io_url}}/r-novice-gapminder/reference.html" target="_blank" class="icon-eye" title="icon-eye"></a></td>
+    <td><a href="{{site.github_io_url}}/r-novice-gapminder" target="_blank" class="icon-browser" title="R for Reproducible Scientific Analysis"></a></td>
+    <td><a href="{{site.github_url}}/r-novice-gapminder" target="_blank" class="icon-github" title="R for Reproducible Scientific Analysis"></a></td>
+    <td><a href="{{site.github_io_url}}/r-novice-gapminder/reference.html" target="_blank" class="icon-eye" title="R for Reproducible Scientific Analysis"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#wright_thomas">Thomas Wright</a>,
       <a href="{{site.baseurl}}/team/#zimmerman_naupaka">Naupaka Zimmerman</a>
@@ -103,9 +103,9 @@ redirect_from:
   </tr>
   <tr id="matlab">
     <td>Programming with MATLAB</td>
-    <td><a href="{{site.github_io_url}}/matlab-novice-inflammation" target="_blank" class="icon-browser" title="icon-browser"></a></td>
-    <td><a href="{{site.github_url}}/matlab-novice-inflammation" target="_blank" class="icon-github" title="icon-github"></a></td>
-    <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/reference.html" target="_blank" class="icon-eye" title="icon-eye"></a></td>
+    <td><a href="{{site.github_io_url}}/matlab-novice-inflammation" target="_blank" class="icon-browser" title="Programming with MATLAB"></a></td>
+    <td><a href="{{site.github_url}}/matlab-novice-inflammation" target="_blank" class="icon-github" title="Programming with MATLAB"></a></td>
+    <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/reference.html" target="_blank" class="icon-eye" title="Programming with MATLAB"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#kiral-kornek_isabell">Isabell Kiral-Kornek</a>,
       <a href="{{site.baseurl}}/team/#srinath_ashwin">Ashwin Srinath </a>
@@ -113,18 +113,18 @@ redirect_from:
   </tr>
   <tr id="make">
     <td>Automation and Make</td>
-    <td><a href="{{site.github_io_url}}/make-novice" target="_blank" class="icon-browser" title="icon-browser"></a></td>
-    <td><a href="{{site.github_url}}/make-novice" target="_blank" class="icon-github" title="icon-github"></a></td>
-    <td><a href="{{site.github_io_url}}/make-novice/reference.html" target="_blank" class="icon-eye" title="icon-eye"></a></td>
+    <td><a href="{{site.github_io_url}}/make-novice" target="_blank" class="icon-browser" title="Automation and Make"></a></td>
+    <td><a href="{{site.github_url}}/make-novice" target="_blank" class="icon-github" title="Automation and Make"></a></td>
+    <td><a href="{{site.github_io_url}}/make-novice/reference.html" target="_blank" class="icon-eye" title="Automation and Make"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#jackson_m">Mike Jackson</a>
     </td>
   </tr>
   <tr id="training">
     <td>Instructor Training</td>
-    <td><a href="{{site.github_io_url}}/instructor-training" target="_blank" class="icon-browser" title="icon-browser"></a></td>
-    <td><a href="{{site.github_url}}/instructor-training" target="_blank" class="icon-github" title="icon-github"></a></td>
-    <td><a href="{{site.github_io_url}}/instructor-training/reference.html" target="_blank" class="icon-eye" title="icon-eye"></a></td>
+    <td><a href="{{site.github_io_url}}/instructor-training" target="_blank" class="icon-browser" title="Instructor Training"></a></td>
+    <td><a href="{{site.github_url}}/instructor-training" target="_blank" class="icon-github" title="Instructor Training"></a></td>
+    <td><a href="{{site.github_io_url}}/instructor-training/reference.html" target="_blank" class="icon-eye" title="Instructor Training"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#wilson_g">Greg Wilson</a>
     </td>
