Closes #99 by adding description of Etherpad setup to lead instructor checklist.

--- a/pages/checklists_lead.html
+++ b/pages/checklists_lead.html
@@ -130,6 +130,16 @@ redirect_from:
       Send email to potential learners saying that registration is now open.
     </p>
   </li>
+  <li>
+    <p>
+      Create an Etherpad for the workshop by going to <a href="http://pad.software-carpentry.org/">http://pad.software-carpentry.org/YYYY-MM-DD-site</a>
+      (where "YYYY-MM-DD-site" is the ID of your workshop).
+      You should add this link to the <code>etherpad</code> field in the header of your workshop's home page
+      so that it shows up on your workshop's website.
+      Note: please don't use our Etherpad for activities other than workshops&mdash;our server
+      struggles to keep up with the load sometimes as it is.
+    </p>
+  </li>
 </ul>
 
 <h2>A Week Before</h2>
