Bring small notepad for writing down scraps of code

--- a/pages/checklists_instructor.html
+++ b/pages/checklists_instructor.html
@@ -140,4 +140,5 @@ redirect_from:
   <li>a few USB drives with installers for various platforms (just in case)</li>
   <li>running shoes, a bathing suit, a yoga mat, or whatever else you exercise in or with</li>
   <li>good shoes (because you'll be standing most of the day)</li>
+  <li>a small notepad for writing down snippets of code for participants</li>
 </ul>
