--- a/pages/scf_partners.html
+++ b/pages/scf_partners.html
@@ -48,7 +48,7 @@ redirect_from:
     {% include orgs/github.html %}
   </div>
   <div class="medium-6 columns">
-    {% include orgs/iplant.html %}
+    {% include orgs/cyverse.html %}
   </div>
 </div>
 <div class="row">
