Page about maintainers' committee

--- a/pages/subcom.html
+++ b/pages/subcom.html
@@ -21,8 +21,12 @@ The existing Subcommittees and Task Forces are always happy to have new people g
     <td><strong>Activities</strong></td>
   </tr>
   <tr>
-    <td><a href='/join/subcom/mentoring'>Mentoring</a></td>
-    <td>Instructor Discussion Sessions, Post-Instructor Training Support, Instructor & Helper Retreat</td>
+    <td><a href='/join/subcom/mentoring/'>Mentoring</a></td>
+    <td>Instructor Discussion Sessions, Post-Instructor Training Support, Instructor &amp; Helper Retreat</td>
+  </tr>
+  <tr>
+    <td><a href='/join/subcom/maintainers/'>Maintainers</a></td>
+    <td>Lesson Maintenance, Lesson and Workshop Templates</td>
   </tr>
 </table>
 
