--- a/pages/subcom_mentorship.html
+++ b/pages/subcom_mentorship.html
@@ -1,6 +1,6 @@
 ---
 layout: page-fullwidth
-permalink: /join/subcom/mentoring
+permalink: /join/subcom/mentoring/
 email: 'mentoring@lists.software-carpentry.org'
 subcomName: Mentoring
 purpose: 'The Mentoring Subcommittee was established in 2015 to develop and maintain a mentorship program to support instructors as they progress through training, teaching, curriculum development, and other community-related activities. We help promote community-building and networking by providing (virtual) spaces where instructors from all over the world can share teaching success stories and discuss strategies for overcoming challenges.'
