--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -20,8 +20,12 @@ redirect_from:
   without asking permission,
   provided you cite us as the original source
   (e.g., provide a link back to this website).
+</p>
+<p>
   If you have questions about contributing to particular lessons,
   please contact its maintainers.
+  If you would like to develop new lessons,
+  please refer to <a href="{{site.baseurl}}/lessons/incubation/">our lesson incubation process</a>.
 </p>
 
 <table class="table table-striped">
