pull in gregs maintainer page, add task forces

--- a/pages/subcom.html
+++ b/pages/subcom.html
@@ -21,12 +21,12 @@ The existing Subcommittees and Task Forces are always happy to have new people g
     <td><strong>Activities</strong></td>
   </tr>
   <tr>
-    <td><a href='/join/subcom/mentoring/'>Mentoring</a></td>
-    <td>Instructor Discussion Sessions, Post-Instructor Training Support, Instructor &amp; Helper Retreat</td>
-  </tr>
-  <tr>
     <td><a href='/join/subcom/maintainers/'>Maintainers</a></td>
     <td>Lesson Maintenance, Lesson and Workshop Templates</td>
+  </tr>
+  <tr>
+    <td><a href='/join/subcom/mentoring/'>Mentoring</a></td>
+    <td>Instructor Discussion Sessions, Post-Instructor Training Support, Instructor &amp; Helper Retreat</td>
   </tr>
 </table>
 
@@ -35,10 +35,17 @@ The existing Subcommittees and Task Forces are always happy to have new people g
   <tr>
     <td><strong>Task Force</strong></td>
     <td><strong>Goals</strong></td>
+    <td><strong>Get Involved</strong></td>
   </tr>
   <tr>
-    <td>Coming Soon</td>
-    <td><a href='https://github.com/swcarpentry/board/blob/master/subcommittees/proposal_instructions.md'>propose something!</a></td>
+    <td>African Guides</td>
+    <td>Help instructor trainees from the April 2016 Instructor Training workshop to qualify as instructors.</td>
+    <td>Coming Soon!</td>
+  </tr>
+  <tr>
+    <td>AMY Development</td>
+    <td>Plan and implement features for the Carpentries' member database, AMY.</td>
+    <td>Coming Soon!</td>
   </tr>
 </table>
 
