--- a/pages/subcom_maintainers.html
+++ b/pages/subcom_maintainers.html
@@ -4,7 +4,7 @@ permalink: /join/subcom/maintainers/
 email: 'lessons@software-carpentry.org'
 subcomName: Maintainers
 purpose: "The Maintainers Subcommittee is responsible for maintaining and publishing our core lessons, and for overseeing development of the workshop and lesson templates."
-join: "<p>This committee is comprised of the maintainers of <a href="{{site.baseurl}}/lessons/">our core lessons</a>.</p>"
+join: "<p>This committee is comprised of the maintainers of <a href='{{site.baseurl}}/lessons/'>our core lessons</a>.</p>"
 activities: 
   - title: "Lesson Maintenance"
     description: "Maintainers oversee the editing and merging of proposed improvements to our core lessons."
