--- a/pages/subcom.html
+++ b/pages/subcom.html
@@ -19,14 +19,17 @@ The existing Subcommittees and Task Forces are always happy to have new people g
   <tr>
     <td><strong>Subcommittee Webpage</strong></td>
     <td><strong>Activities</strong></td>
+    <td><strong>Contact</strong></td>
   </tr>
   <tr>
     <td><a href='/join/subcom/maintainers/'>Maintainers</a></td>
     <td>Lesson Maintenance, Lesson and Workshop Templates</td>
+    <td><a href='mailto:lessons@software-carpentry.org'>lessons@software-carpentry.org</a></td>
   </tr>
   <tr>
     <td><a href='/join/subcom/mentoring/'>Mentoring</a></td>
     <td>Instructor Discussion Sessions, Post-Instructor Training Support, Instructor &amp; Helper Retreat</td>
+    <td><a href='mailto:mentoring@lists.software-carpentry.org'>mentoring@lists.software-carpentry.org</a></td>
   </tr>
 </table>
 
@@ -35,12 +38,12 @@ The existing Subcommittees and Task Forces are always happy to have new people g
   <tr>
     <td><strong>Task Force</strong></td>
     <td><strong>Goals</strong></td>
-    <td><strong>Get Involved</strong></td>
+    <td><strong>Contact</strong></td>
   </tr>
   <tr>
     <td>African Guides</td>
     <td>Help instructor trainees from the April 2016 Instructor Training workshop to qualify as instructors.</td>
-    <td>Coming Soon!</td>
+    <td><a href='https://twitter.com/cloudaus'>Belinda Weaver</a></td>
   </tr>
   <tr>
     <td>AMY Development</td>
