--- a/pages/join.html
+++ b/pages/join.html
@@ -11,13 +11,19 @@ redirect_from:
 </div>
 <h2 id="instructors">Instructors</h2>
 <p>
-  We run a training course to help people become instructors.
-  The online version requires 2-4 hours/week for 12 weeks,
-  while the live version runs over two full days.
-  The course covers the basics of educational psychology,
-  instructional design,
-  and how to apply both to teaching programming to adults.
+There are two steps to becoming an instructor.
 </p>
+<p>
+<b>1. Take a Software Carpentry Foundation instructor training course</b>: The training course runs over two full days and
+covers the basics of educational psychology, instructional design, and how to apply both to teaching Software Carpentry and
+Data Carpentry materials. For a preview of materials - see
+<a href="https://swcarpentry.github.io/instructor-training/">the instructor training course page</a>.
+</p>
+<p>
+<b>2. Complete the Software Carpentry specific checkout process</b>: You must complete three short tasks after the course in order to complete certification. These tasks are described
+<a href="https://swcarpentry.github.io/instructor-training/checkout/">here</a>.
+</p>
+
 <p align="center">
   <em>
     Registration for instructor training is currently on hold
