point at AMY repo issue tracker for their get involved link

--- a/pages/subcom.html
+++ b/pages/subcom.html
@@ -48,7 +48,7 @@ The existing Subcommittees and Task Forces are always happy to have new people g
   <tr>
     <td>AMY Development</td>
     <td>Plan and implement features for the Carpentries' member database, AMY.</td>
-    <td>Coming Soon!</td>
+    <td><a href='https://github.com/swcarpentry/amy/issues'>Open an Issue</a></td>
   </tr>
 </table>
 
