Adjusting lessons page based on feedback.
1.  Removing navbar link to lesson incubation proposal.
2.  Using 3-column layout for information about existing lessons to make things easier to find.

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -5,28 +5,37 @@ title: Our Lessons
 redirect_from:
   - /lessons.html
 ---
-<p>
-  Our lessons are developed collaboratively on <a href="{{site.github_url}}">GitHub</a>.
-  You can check the status of each lesson on <a href="{{site.baseurl}}/lessons/dashboard/">our dashboard</a>,
-  view the <a href="http://scf.rgaiacs.com/nightly/">nightly build</a>,
-  or look at <a href="{{site.baseurl}}/lessons/previous">older releases</a>.
-  You may also enjoy <a href="http://www.datacarpentry.org/lessons/">Data Carpentry's lessons</a>,
-  which focus on data organization, cleanup, analysis, and visualization.
-</p>
-<p>
-  All of our lessons are freely available under
-  the <a href="{{site.baseurl}}/license/">Creative Commons - Attribution License</a>.
-  You may re-use and re-mix the material in any way you wish,
-  without asking permission,
-  provided you cite us as the original source
-  (e.g., provide a link back to this website).
-</p>
-<p>
-  If you have questions about contributing to particular lessons,
-  please contact its maintainers.
-  If you would like to develop new lessons,
-  please refer to <a href="{{site.baseurl}}/lessons/incubation/">our lesson incubation process</a>.
-</p>
+<div class="row">
+  <div class="medium-4 columns">
+    <h4>Curriculum</h4>
+    <p>
+      Our lessons are developed collaboratively on <a href="{{site.github_url}}">GitHub</a>.
+      You can check the status of each lesson on <a href="{{site.baseurl}}/lessons/dashboard/">our dashboard</a>,
+      view the <a href="http://scf.rgaiacs.com/nightly/">nightly build</a>,
+      or look at <a href="{{site.baseurl}}/lessons/previous">older releases</a>.
+    </p>
+  </div>
+  <div class="medium-4 columns">
+    <h4>Availability</h4>
+    <p>
+      All of our lessons are freely available under
+      the <a href="{{site.baseurl}}/license/">Creative Commons - Attribution License</a>.
+      You may re-use and re-mix the material in any way you wish,
+      without asking permission,
+      provided you cite us as the original source
+      (e.g., provide a link back to this website).
+    </p>
+  </div>
+  <div class="medium-4 columns">
+    <h4>Contributing</h4>
+    <p>
+      If you have questions about contributing to particular lessons,
+      please contact their maintainers (listed below).
+      If you would like to develop new lessons,
+      please see <a href="{{site.baseurl}}/lessons/incubation/">our lesson incubation process</a>.
+    </p>
+  </div>
+</div>
 
 <table class="table table-striped">
   <tr>
@@ -134,6 +143,11 @@ redirect_from:
     </td>
   </tr>
 </table>
+
+<p>
+  You may also enjoy <a href="http://www.datacarpentry.org/lessons/">Data Carpentry's lessons</a>,
+  which focus on data organization, cleanup, analysis, and visualization.
+</p>
 
 <h2 id="video">Videos</h2>
 
