Fix invalid email link in lead instructor checklist.

--- a/pages/checklists_lead.html
+++ b/pages/checklists_lead.html
@@ -44,7 +44,7 @@ redirect_from:
   </li>
   <li>
     <p>
-      <strong>Email the workshop's URL to <a href="{{site.contact}}">the administrators</a></strong>
+      <strong>Email the workshop's URL to <a href="mailto:{{site.contact}}">the administrators</a></strong>
       so that they can add it to our database.
       The workshop will then show up on the main website the next time it is rebuilt
       (which typically happens hourly).
