Updated make-novice maintainer to be Gerard Capes

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -117,7 +117,7 @@ redirect_from:
     <td><a href="{{site.github_url}}/make-novice" target="_blank" class="icon-github" title="Automation and Make"></a></td>
     <td><a href="{{site.github_io_url}}/make-novice/reference.html" target="_blank" class="icon-eye" title="Automation and Make"></a></td>
     <td>
-      <a href="{{site.baseurl}}/team/#jackson_m">Mike Jackson</a>
+      <a href="{{site.baseurl}}/team/#capes_gerard">Gerard Capes</a>
     </td>
   </tr>
   <tr id="training">
