fixed route to subcom landing page

--- a/pages/subcom.html
+++ b/pages/subcom.html
@@ -1,6 +1,6 @@
 ---
 layout: page-fullwidth
-permalink: /join/subcom_and_tf
+permalink: /join/subcom_and_tf/
 title: Subcommittees and Task Forces
 ---
 
