--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -131,6 +131,15 @@ redirect_from:
   </tr>
 </table>
 
+<p>
+  To learn more about how our lessons are structured, and why,
+  please see <a href="{{site.github_io_url}}/lesson-example">the example lesson</a>.
+  The template for our workshop websites can be found in
+  <a href="{{site.github_url}}/workshop-template">this repository</a>,
+  and <a href="{{site.github_url}}/styles">the styles repository</a> contains
+  the CSS, Javascript, and other tools and resources these repositories share.
+</p>
+
 <h2 id="video">Videos</h2>
 
 <p>
