fixed broken links

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -268,12 +268,12 @@ redirect_from:
   <dt id="how-become-instructor">How can I become an instructor myself?</dt>
   <dd>
     <p>
-      We offer a <a href="{{site.training_url}}">free online training course</a>
+      We offer a <a href="{{site.baseurl}}/pages/lessons.html">free online training course</a>
       for people who would like to teach Software Carpentry,
       and to learn more about teaching in general along the way.
       The course takes 2-4 hours a week for 12-14 weeks (depending on interruptions);
       most work is done on trainees' own time,
-      and is posted to the <a href="{{site.training_url}}">course blog</a>.
+      and is posted to the <a href="{{site.baseurl}}/blow/index.html">course blog</a>.
     </p>
   </dd>
 
