Adding UCSD's logo and blurb

--- a/pages/scf_partners.html
+++ b/pages/scf_partners.html
@@ -120,6 +120,14 @@ redirect_from:
     {% include orgs/umiami.html %}
   </div>
 </div>
+<div class="row">
+  <div class="medium-6 columns">
+    {% include orgs/ucsd.html %}
+  </div>
+  <div class="medium-6 columns">
+    
+  </div>
+</div>
 
 <hr/>
 
