Updating information about training course enrolment

--- a/pages/join.html
+++ b/pages/join.html
@@ -5,35 +5,46 @@ title: Join Us
 redirect_from:
   - /pages/join.html
   - /pages/training.html
+training: http://teaching.software-carpentry.org
 ---
 <div align="center">
   <img src="{{site.filesurl}}/workshops/scipy-2015-c-slice.jpg" alt="SciPy 2015" />
 </div>
+
 <h2 id="instructors">Instructors</h2>
+
 <p>
-There are two steps to becoming an instructor.
+There are two steps to becoming an instructor:
 </p>
-<p>
-<b>1. Take a Software Carpentry Foundation instructor training course</b>: The training course runs over two full days and
-covers the basics of educational psychology, instructional design, and how to apply both to teaching Software Carpentry and
-Data Carpentry materials. For a preview of materials - see
-<a href="https://swcarpentry.github.io/instructor-training/">the instructor training course page</a>.
-</p>
-<p>
-<b>2. Complete the Software Carpentry specific checkout process</b>: You must complete three short tasks after the course in order to complete certification. These tasks are described
-<a href="https://swcarpentry.github.io/instructor-training/checkout/">here</a>.
-</p>
+<ol>
+  <li>
+    <p>
+      <b>Take the <a href="{{page.training}}">instructor training course</a></b>:
+      This course runs over two full days and covers the basics of
+      educational psychology, instructional design, and how to apply both
+      to teaching Software Carpentry and Data Carpentry materials.
+    </p>
+  </li>
+  <li>
+    <p>
+      <b>Complete the Software Carpentry checkout process</b>:
+      You must complete
+      <a href="{{page.training}}/checkout/">three short tasks</a>
+      after the course in order to complete certification.
+    </p>
+  </li>
+</ol>
 
 <p align="center">
   <em>
-    Registration for instructor training is currently on hold
-    while we try to clear our backlog.
-    If you have already applied to take part,
-    we will keep your application in queue.
-    Registration will reopen in 2016&mdash;please
-    keep an eye on our blog for announcements.
+    Registration for the Fall 2016 training courses is now closed, but
+    we are still accepting applications for subsequent courses.  If
+    you would like to apply, or are taking the course through one of
+    our partner organizations and have been asked to provide information,
+    please fill in <a href="{{site.amy_url}}/request_training/">this form</a>.
   </em>
 </p>
+
 <p>
   If you are already an instructor and would like to let us know that you have moved,
   changed your email address,
