Unifying URLs for instructor training materials.
1.  Modifying configuration to have one variable for this.
2.  Updating all references (current and past) to use that variable.

--- a/pages/join.html
+++ b/pages/join.html
@@ -5,7 +5,6 @@ title: Join Us
 redirect_from:
   - /pages/join.html
   - /pages/training.html
-training: http://teaching.software-carpentry.org
 ---
 <div align="center">
   <img src="{{site.filesurl}}/workshops/scipy-2015-c-slice.jpg" alt="SciPy 2015" />
@@ -19,7 +18,7 @@ There are two steps to becoming an instructor:
 <ol>
   <li>
     <p>
-      <b>Take the <a href="{{page.training}}">instructor training course</a></b>:
+      <b>Take the <a href="{{site.training_url}}">instructor training course</a></b>:
       This course runs over two full days and covers the basics of
       educational psychology, instructional design, and how to apply both
       to teaching Software Carpentry and Data Carpentry materials.
@@ -29,7 +28,7 @@ There are two steps to becoming an instructor:
     <p>
       <b>Complete the Software Carpentry checkout process</b>:
       You must complete
-      <a href="{{page.training}}/checkout/">three short tasks</a>
+      <a href="{{site.training_url}}/checkout/">three short tasks</a>
       after the course in order to complete certification.
     </p>
   </li>
