Removing out-of-date reference to training blog

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -272,8 +272,7 @@ redirect_from:
       for people who would like to teach Software Carpentry,
       and to learn more about teaching in general along the way.
       The course takes 2-4 hours a week for 12-14 weeks (depending on interruptions);
-      most work is done on trainees' own time,
-      and is posted to the <a href="{{site.training_url}}">course blog</a>.
+      most work is done on trainees' own time.
     </p>
   </dd>
 
